Rename StreamableHttpMCPServlet